<resources>
    <string name="app_name">ToolBarDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="date_picker_dialog">Date Picker Dialog</string>
    <string name="time_picker_dialog">Time Picker dialog</string>
    <string name="hint">Data from dialog</string>
    <string name="positive">OK</string>
    <string name="negative">Cancel</string>
    <string name="check_box">Check Box</string>
    <string name="frag_btn">Send</string>
</resources>
