<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/tool_bar"
        android:id="@+id/tool_bar"/>

    <RelativeLayout
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/btn_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/alert_dialog_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_dialog"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/date_picker_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_picker_dialog"/>
            <RadioButton
                android:id="@+id/time_picker_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_picker_dialog"/>
        </RadioGroup>

        <Button
            android:id="@+id/show_dialog_btn"
            android:layout_marginTop="32dp"
            android:layout_below="@id/btn_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            style="?attr/borderlessButtonStyle"
            android:text="@string/show_dialog"/>
        
        <View
            android:id="@+id/hr"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_below="@id/show_dialog_btn"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/text_view"
            android:layout_below="@id/hr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:hint="@string/hint"/>

    </RelativeLayout>

</RelativeLayout>
